# A2CN

./: CONTRIBUTING.md  GOVERNANCE.md  README.md
reference-implementation/: README.md
reference-implementation/python/: README.md  pyproject.toml  requirements.txt
reference-implementation/python/a2cn/: client.py  crypto.py  did.py  invitation.py  messages.py  record.py  server.py  session.py
reference-implementation/python/adapters/: fairmarkit_adapter.py  revenue_cloud_adapter.py
reference-implementation/python/examples/: discovery_document.json  invitation_flow.py  saas_renewal.py
reference-implementation/python/tests/: conftest.py  test_adapters.py  test_crypto.py  test_deal_type_terms.py  test_did.py  test_invitations.py  test_messages.py  test_server.py  test_session.py
reference-implementation/python/tests/conformance/: test_conformance.py
sdk/: README.md
spec/: README.md  a2cn-spec-v0.1.3.md  a2cn-spec-v0.2.0.md
spec/schemas/: invitation-acceptance.schema.json  invitation-decline.schema.json  session-invitation.schema.json
spec/schemas/terms/: goods_procurement.schema.json  saas_renewal.schema.json
